--- a/mkosi.conf
+++ b/mkosi.conf
@@ -1,2 +1,18 @@
 [Distribution]
 @Distribution=fedora
+
+[Output]
+@Format=directory
+CacheDirectory=mkosi.cache
+OutputDirectory=mkosi.output
+ManifestFormat=json,changelog
+
+[Preset]
+Presets=system
+
+[Content]
+SourceDateEpoch=0
+
+[Host]
+@QemuMem=2G
+@RuntimeSize=8G
