--- a/mkosi.presets/initrd/mkosi.conf
+++ b/mkosi.presets/initrd/mkosi.conf
@@ -1,39 +1,45 @@
-# SPDX-License-Identifier: LGPL-2.1-or-later
-
-[Preset]
-Dependencies=base
-
 [Output]
 Format=cpio
 
 [Content]
 MakeInitrd=yes
+SourceDateEpoch=0
 Bootable=no
 BuildPackages=
 
 Packages=
 Packages=
-        audit-libs
-        btrfs-progs
-        coreutils
-        cryptsetup
-        cryptsetup-libs
-        e2fsprogs
-        fido2-tools
-        gdisk
-        gnupg2
-        gzip
-        integritysetup
-        openssl
-        procps-ng
-        qrencode-libs
-        systemd
-        tar
-        tpm2-tss
-        udev
-        util-linux
-        util-linux
-        veritysetup
-        xfsprogs
-        xz
-        zstd
+         audit-libs
+         btrfs-progs
+         cryptsetup
+         cryptsetup-libs
+         e2fsprogs
+         fido2-tools
+         gdisk
+         glibc-minimal-langpack
+         gnupg2
+         gzip
+         integritysetup
+         openssl
+         procps-ng
+         qrencode-libs
+         systemd
+         tar
+         tpm2-tss
+         udev
+         util-linux
+         veritysetup
+         xfsprogs
+         xz
+         zstd
+
+CleanPackageMetadata=yes
+RemoveFiles=/var/log
+RemoveFiles=/var/cache
+RemoveFiles=/etc/pki/ca-trust/extracted/java/cacerts
+            /usr/lib/sysimage/libdnf5/transaction_history.sqlite*
+            /var/cache/ldconfig/aux-cache
+            /usr/lib/systemd/catalog/systemd.*.catalog
+            /usr/share/gcc*
+            /usr/share/gdb*
+            /usr/share/gnupg/help.*.txt
