WIP system image building

--- a/mkosi.presets/base/mkosi.conf
+++ b/mkosi.presets/base/mkosi.conf
@@ -9,18 +9,15 @@ Packages=
 
 # System base
 Packages=
-         systemd
          dbus
+         kbd
+         systemd
          udev
          util-linux
 
-# SELinux
-Packages=
-         selinux-policy
-         selinux-policy-targeted
-
 # Network setup
 Packages=
+         ca-certificates
          iproute
          iputils
          systemd-resolved
@@ -28,28 +25,57 @@ Packages=
 # Measured boot
 Packages=
          efitools
-         tpm2-tools
          mokutil
          sbsigntools
+         tpm2-tools
 
 # Disks
 Packages=
-         nvme-cli
          device-mapper
          lvm2
+         mdadm
+         nvme-cli
+
+# File systems
+Packages=
+         btrfs-progs
+         dosfstools
+         e2fsprogs
+         erofs-utils
+         f2fs-tools
+         squashfs-tools
+         xfsprogs
 
 # Encryption/authentication
 Packages=
          cryptsetup
+         fido2-tools
+         gnupg2
          integritysetup
          veritysetup
+
+# Compression/archives
+Packages=
+         cpio
+         tar
+         gzip
+         bzip2
+         xz
+         zip
+         zstd
+
 # Useful tools
 Packages=
-         nano
-         shadow-utils
+         acl
+         attr
          curl
-         less
-         sed
+         file
          gawk
-         rsync
+         less
+         nano
          openssh-clients
+         passwd
+         procps-ng
+         rsync
+         sed
+         shadow-utils
