--- a/mkosi.presets/initrd/mkosi.conf
+++ b/mkosi.presets/initrd/mkosi.conf
@@ -11,6 +11,9 @@ Packages=
 Packages=
          audit-libs
          btrfs-progs
+         clevis-pin-tpm2
+         clevis-luks
+         clevis-systemd
          cryptsetup
          cryptsetup-libs
          e2fsprogs
@@ -21,8 +24,11 @@ Packages=
          gzip
          integritysetup
          openssl
+         #policycoreutils
          procps-ng
          qrencode-libs
+         #selinux-policy
+         #selinux-policy-targeted
          systemd
          tar
          tpm2-tss
