--- a/mkosi.presets/system/mkosi.repart/20-luks-header-var.conf
+++ b/mkosi.presets/system/mkosi.repart/20-luks-header-var.conf
@@ -3,7 +3,7 @@ Type=linux-generic
 Format=xfs
 Encrypt=key-file
 GrowFileSystem=no
-Label=luks-header-var
+Label=lukshdr-var
 UUID=null
 SizeMinBytes=64M
 SizeMaxBytes=64M
