--- a/mkosi.conf
+++ b/mkosi.conf
@@ -5,7 +5,7 @@
 @Format=directory
 CacheDirectory=mkosi.cache
 OutputDirectory=mkosi.output
-ManifestFormat=json,changelog
+#ManifestFormat=json,changelog
 
 [Preset]
 Presets=system
