WIP base system

--- a/mkosi.conf
+++ b/mkosi.conf
@@ -2,13 +2,13 @@
 @Distribution=fedora
 
 [Output]
-@Format=directory
+@Format=disk
 CacheDirectory=mkosi.cache
 OutputDirectory=mkosi.output
 #ManifestFormat=json,changelog
 
-[Preset]
-Presets=system
+#[Preset]
+#Presets=system
 
 [Content]
 SourceDateEpoch=0
