--- a/mkosi.presets/base/mkosi.conf
+++ b/mkosi.presets/base/mkosi.conf
@@ -1,26 +1,57 @@
 [Output]
 Format=directory
+Seed=2bc9ca56-4112-47bf-a66a-14788fc97664
 
 [Content]
 SourceDateEpoch=0
 Bootable=no
+CleanPackageMetadata=no
 
 Packages=
 
 # System base
 Packages=
+         audit
          dbus
+         distribution-gpg-keys
+         efibootmgr
+         efitools
          kbd
+         kernel-modules
+         kexec-tools
+         langpacks-en
+         python3-cryptography
+         sudo
          systemd
+         systemd-boot
+         systemd-udev
+         tzdata
          udev
          util-linux
+         zram-generator
 
-# Network setup
+# SELinux
 Packages=
-         ca-certificates
-         iproute
-         iputils
-         systemd-resolved
+         libselinux
+         libselinux-utils
+         policycoreutils
+         selinux-policy
+         selinux-policy-targeted
+
+# Hardware support
+Packages=
+         amd-gpu-firmware
+         atheros-firmware
+         brcmfmac-firmware
+         fwupd
+         intel-gpu-firmware
+         iwlwifi-dvm-firmware
+         iwlwifi-mvm-firmware
+         linux-firmware
+         microcode_ctl
+         mt7xxx-firmware
+         nvidia-gpu-firmware
+         realtek-firmware
 
 # Measured boot
 Packages=
@@ -43,6 +74,7 @@ Packages=
          e2fsprogs
          erofs-utils
          f2fs-tools
+         fuse
          squashfs-tools
          xfsprogs
 
@@ -53,6 +85,26 @@ Packages=
          gnupg2
          integritysetup
          veritysetup
+
+# Network setup
+Packages=
+         bind-utils
+         ca-certificates
+         chrony
+         firewalld
+         hostname
+         ipcalc
+         iproute
+         iproute-tc
+         iputils
+         nftables
+         socat
+         systemd-networkd
+         systemd-resolved
+         teamd
+         unbound-utils
+         wireguard-tools
+         wpa_supplicant
 
 # Compression/archives
 Packages=
@@ -68,14 +120,25 @@ Packages=
 Packages=
          acl
          attr
+         bash
+         coreutils
          curl
+         diffutils
          file
+         findutils
          gawk
          less
+         moreutils
          nano
          openssh-clients
          passwd
+         patch
+         patchutils
          procps-ng
          rsync
          sed
          shadow-utils
+         tree
+         vim
+         wget
+         zsh
