--- a/mkosi.presets/initrd/mkosi.conf
+++ b/mkosi.presets/initrd/mkosi.conf
@@ -7,37 +7,108 @@ SourceDateEpoch=0
 Bootable=no
 BuildPackages=
 
-Packages=
+# System base
 Packages=
          audit-libs
+         bash
+         coreutils
+         dbus
+         kbd
+         qrencode
+         sudo
+         systemd
+         udev
+         util-linux
+         zram-generator
+
+# SELinux
+#Packages=
+#         checkpolicy
+#         libselinux
+#         libselinux-utils
+#         policycoreutils
+#         selinux-policy
+#         selinux-policy-targeted
+
+# Measured boot
+Packages=
+         efitools
+         efibootmgr
+         sbsigntools
+         tpm2-tools
+         tpm2-tss
+
+# Disks
+Packages=
+         device-mapper
+         lvm2
+         mdadm
+         nvme-cli
+
+# File systems
+Packages=
          btrfs-progs
+         dosfstools
+         e2fsprogs
+         erofs-utils
+         fuse
+         f2fs-tools
+         squashfs-tools
+         xfsprogs
+
+# Encryption/authentication
+Packages=
          clevis-pin-tpm2
          clevis-luks
          clevis-systemd
          cryptsetup
-         cryptsetup-libs
-         e2fsprogs
          fido2-tools
-         gdisk
-         glibc-minimal-langpack
          gnupg2
-         gzip
          integritysetup
-         openssl
-         #policycoreutils
-         procps-ng
-         qrencode-libs
-         #selinux-policy
-         #selinux-policy-targeted
-         systemd
-         tar
-         tpm2-tss
-         udev
-         util-linux
+         tpm2-pkcs11
+         tpm2-pkcs11-tools
          veritysetup
-         xfsprogs
+
+# Network setup
+Packages=
+         ca-certificates
+         iproute
+         iputils
+         systemd-resolved
+
+# Compression/archives
+Packages=
+         cpio
+         tar
+         gzip
+         bzip2
          xz
+         zip
          zstd
+
+# Useful tools
+Packages=
+         acl
+         attr
+         busybox
+         curl
+         diffutils
+         findutils
+         gawk
+         less
+         nano
+         openssh-clients
+         passwd
+         procps-ng
+         rsync
+         sed
+         shadow-utils
+         vim-minimal
+         wget
+
+# Hardware support
+Packages=
+         microcode_ctl
 
 CleanPackageMetadata=yes
 RemoveFiles=/var/log
@@ -49,3 +120,4 @@ RemoveFiles=/etc/pki/ca-trust/extracted/java/cacerts
             /usr/share/gcc*
             /usr/share/gdb*
             /usr/share/gnupg/help.*.txt
+            /usr/share/doc
