--- a/mkosi.presets/system/mkosi.repart/05-root.conf
+++ b/mkosi.presets/system/mkosi.repart/05-root.conf
@@ -1,7 +1,10 @@
 [Partition]
 Type=root
-Format=xfs
+Format=erofs
 CopyFiles=/:/
 ExcludeFilesTarget=/usr/
 ExcludeFilesTarget=/var/
+ExcludeFilesTarget=/home/
+ExcludeFilesTarget=/opt/
+ExcludeFilesTarget=/srv/
 ExcludeFilesTarget=/run/
