--- a/mkosi.conf.d/10-tools-tree.conf
+++ b/mkosi.conf.d/10-tools-tree.conf
@@ -4,4 +4,8 @@ SystemdVersion=<254
 
 [Host]
 ToolsTree=default
-ToolsTreePackages=policycoreutils
+ToolsTreePackages=
+                  policycoreutils
+                  osslsigncode
+                  pesign
+                  sbsigntools
