--- a/mkosi.presets/system/mkosi.conf
+++ b/mkosi.presets/system/mkosi.conf
@@ -2,7 +2,8 @@
 Dependencies=base
 
 [Output]
-#ManifestFormat=json,changelog
+Seed=1bec7dfe-9a8b-4b0d-b17e-49ac96d4cfa6
+Format=disk
 
 [Content]
 BaseTrees=../../mkosi.output/base
@@ -13,154 +14,6 @@ Bootable=yes
 #KernelCommandLine=root=tmpfs
 # systemd.mount-extra=overlay:/etc:overlay:noauto,x-systemd.automount,lowerdir=/usr/etc,upperdir=/var/etc
 
-# Base system
-Packages=
-         audit
-         distribution-gpg-keys
-         efibootmgr
-         efitools
-         kernel-modules
-         kexec-tools
-         python3-cryptography
-         systemd
-         systemd-boot
-         systemd-udev
-         systemd-ukify
-         tzdata
-         langpacks-en
-         zram-generator
-
-# Hardware support
-Packages=
-         amd-gpu-firmware
-         atheros-firmware
-         brcmfmac-firmware
-         fwupd
-         intel-gpu-firmware
-         iwlwifi-dvm-firmware
-         iwlwifi-mvm-firmware
-         linux-firmware
-         microcode_ctl
-         mt7xxx-firmware
-         nvidia-gpu-firmware
-         realtek-firmware
-
-# Networking
-Packages=
-         chrony
-         firewalld
-         iproute
-         iproute-tc
-         ipcalc
-         hostname
-         bind-utils
-         unbound-utils
-         nftables
-         socat
-         systemd-networkd
-         systemd-resolved
-         teamd
-         wireguard-tools
-         wpa_supplicant
-
-# Remote access
-Packages=
-         openssh-clients
-         openssh-server
-
-# Containers
-Packages=
-         systemd-container
-         catatonit
-         criu
-         criu-libs
-         crun
-         cri-o
-         cri-tools
-         runc
-         toolbox
-         passt
-         podman
-         skopeo
-         podman-plugins
-         dnsmasq
-         aardvark-dns
-         netavark
-         containernetworking-plugins
-
-# Virtualization
-Packages=
-         edk2-ovmf
-         libvirt-client
-         libvirt-daemon-driver-interface
-         libvirt-daemon-driver-lxc
-         libvirt-daemon-driver-network
-         libvirt-daemon-driver-nodedev
-         libvirt-daemon-driver-nwfilter
-         libvirt-daemon-driver-qemu
-         libvirt-daemon-driver-secret
-         libvirt-daemon-driver-storage-core
-         libvirt-daemon-driver-storage-disk
-         libvirt-daemon-driver-storage-logical
-         libvirt-daemon-driver-storage-scsi
-         qemu-device-display-virtio-gpu
-         qemu-device-display-virtio-gpu-pci
-         qemu-device-display-virtio-vga
-         qemu-device-display-virtio-vga-gl
-         qemu-device-usb-host
-         qemu-device-usb-redirect
-         qemu-device-usb-smartcard
-         qemu-img
-         qemu-kvm-core
-         qemu-user-static
-         qemu-user-binfmt
-         swtpm
-         virt-install
-         virt-top
-         virt-what
-         virtiofsd
-
-# VM guest
-Packages=
-         qemu-guest-agent
-
-# Secureboot/measured boot
-Packages=
-         pesign
-         sbsigntools
-
-# SELinux
-Packages=
-         policycoreutils
-         selinux-policy
-         selinux-policy-targeted
-         setools-console
-
-# Useful tools
-Packages=
-         bash
-         bash-color-prompt
-         bash-completion
-         bsdtar
-         coreutils
-         diff
-         diffutils
-         file
-         findutils
-         git-core
-         htop
-         jq
-         lsof
-         moreutils
-         patch
-         patchutils
-         qrencode
-         screen
-         sudo
-         tmux
-         tree
-         vim
-         zsh
 
 [Validation]
 @SecureBoot=yes
