--- a/mkosi.presets/system/mkosi.repart/10-usr.conf
+++ b/mkosi.presets/system/mkosi.repart/10-usr.conf
@@ -2,7 +2,7 @@
 Type=usr
 Format=erofs
 CopyFiles=/usr:/
-CopyFiles=/etc:/etc
+CopyFiles=/etc:/share/factory/etc
 Verity=data
 VerityMatchKey=usr
 Minimize=yes
