initrd: Add crypto tools

--- a/mkosi.presets/initrd/mkosi.conf
+++ b/mkosi.presets/initrd/mkosi.conf
@@ -7,6 +7,8 @@ SourceDateEpoch=0
 Bootable=no
 BuildPackages=
 
+Packages=
+
 # System base
 Packages=
          audit-libs
@@ -34,6 +36,8 @@ Packages=
 Packages=
          efitools
          efibootmgr
+         ima-evm-utils
+         keyutils
          sbsigntools
          tpm2-tools
          tpm2-tss
@@ -98,6 +102,7 @@ Packages=
          less
          nano
          openssh-clients
+         openssl
          passwd
          procps-ng
          rsync
