system: Remove boot-related partitions

--- a/mkosi.presets/system/mkosi.conf
+++ b/mkosi.presets/system/mkosi.conf
@@ -1,15 +1,22 @@
 [Preset]
 Dependencies=base
+Dependencies=initrd
 
 [Output]
 Seed=1bec7dfe-9a8b-4b0d-b17e-49ac96d4cfa6
 Format=disk
+SplitArtifacts=yes
+ManifestFormat=json,changelog
 
 [Content]
 BaseTrees=../../mkosi.output/base
-Bootloader=uki
-Bootable=yes
-
+Bootable=no
+#Bootloader=uki
+#Initrds=../../mkosi.output/initrd
+#KernelModulesInitrdExclude=
+#   drivers/media
+#   sound/
+#   kernel/kheaders*
 #KernelCommandLine=
 #KernelCommandLine=root=tmpfs
 # systemd.mount-extra=overlay:/etc:overlay:noauto,x-systemd.automount,lowerdir=/usr/etc,upperdir=/var/etc
