WIP securing boot

--- a/mkosi.conf
+++ b/mkosi.conf
@@ -14,5 +14,12 @@ OutputDirectory=mkosi.output
 SourceDateEpoch=0
 
 [Host]
+Acl=yes
 @QemuMem=2G
 @RuntimeSize=8G
+Ephemeral=yes
+QemuArgs=
+  -drive if=virtio,format=qcow2,id=root,file=disks/root-1.qcow2
+  -drive if=virtio,format=qcow2,id=var-1,file=disks/var-1.qcow2
+  -drive if=virtio,format=qcow2,id=var-2,file=disks/var-2.qcow2
+  -drive if=virtio,format=qcow2,id=srv-1,file=disks/srv-1.qcow2
