--- a/mkosi.conf.d/10-tools-tree.conf
+++ b/mkosi.conf.d/10-tools-tree.conf
@@ -5,6 +5,8 @@ SystemdVersion=<254
 [Host]
 ToolsTree=default
 ToolsTreePackages=
+                  acl
+                  attr
                   policycoreutils
                   osslsigncode
                   pesign
