--- a/mkosi.images/initrd/mkosi.conf
+++ b/mkosi.images/initrd/mkosi.conf
@@ -34,8 +34,9 @@ Packages=
 
 # Measured boot
 Packages=
-         efitools
          efibootmgr
+         efitools
+         efivar
          ima-evm-utils
          keyutils
          sbsigntools
@@ -57,20 +58,23 @@ Packages=
          erofs-utils
          fuse
          f2fs-tools
+         gdisk
          squashfs-tools
          xfsprogs
 
 # Encryption/authentication
 Packages=
-         clevis-pin-tpm2
-         clevis-luks
-         clevis-systemd
+         #clevis-luks
+         #clevis-pin-tpm2
+         #clevis-systemd
          cryptsetup
          fido2-tools
          gnupg2
+         google-authenticator
          integritysetup
-         tpm2-pkcs11
-         tpm2-pkcs11-tools
+         oathtool
+         #tpm2-pkcs11
+         #tpm2-pkcs11-tools
          veritysetup
 
 # Network setup
@@ -110,12 +114,10 @@ Packages=
          shadow-utils
          vim-minimal
          wget
-
-# Hardware support
-Packages=
-         microcode_ctl
+         xxd
 
 CleanPackageMetadata=yes
+RemoveFiles=/efi/EFI
 RemoveFiles=/var/log
 RemoveFiles=/var/cache
 RemoveFiles=/etc/pki/ca-trust/extracted/java/cacerts
