--- a/mkosi.images/initrd/mkosi.extra/usr/lib/repart.d/80-sysimages.conf
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/repart.d/80-sysimages.conf
@@ -1,6 +1,6 @@
 [Partition]
 Type=linux-generic
 Label=sysimages
-Format=btrfs
+Format=xfs
 Encrypt=key-file
-SplitName=sysimages
+GrowFileSystem=yes
