--- a/mkosi.images/system/mkosi.conf
+++ b/mkosi.images/system/mkosi.conf
@@ -1,4 +1,4 @@
-[Preset]
+[Config]
 Dependencies=base
 Dependencies=initrd
 
@@ -7,6 +7,7 @@ Seed=1bec7dfe-9a8b-4b0d-b17e-49ac96d4cfa6
 Format=disk
 SplitArtifacts=yes
 ManifestFormat=json,changelog
+ImageId=spork
 
 [Content]
 BaseTrees=../../mkosi.output/base
