Setting up LUKS devices

--- a/mkosi.images/bootdisk/mkosi.conf
+++ b/mkosi.images/bootdisk/mkosi.conf
@@ -129,6 +129,6 @@ KernelModulesInitrdInclude=
 
 
 [Validation]
-@SecureBoot=yes
-@SignExpectedPcr=yes
+SecureBoot=yes
+SignExpectedPcr=yes
 Checksum=yes
