--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-repart-bootdisk.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-repart-bootdisk.service
@@ -6,22 +6,22 @@ Conflicts=shutdown.target
 Wants=modprobe@loop.service modprobe@dm_mod.service
 After=modprobe@loop.service modprobe@dm_mod.service
 Before=initrd-usr-fs.target initrd-root-fs.target shutdown.target
+Requires=dev-disk-by\x2did-boot\x2desp.device
+After=dev-disk-by\x2did-boot\x2desp.device
 ConditionVirtualization=!container
+ConditionFirmware=uefi
 ConditionDirectoryNotEmpty=|/usr/lib/repart.d
 ConditionDirectoryNotEmpty=|/usr/local/lib/repart.d
 ConditionDirectoryNotEmpty=|/etc/repart.d
 ConditionDirectoryNotEmpty=|/run/repart.d
-ConditionDirectoryNotEmpty=|/sysroot/usr/lib/repart.d
-ConditionDirectoryNotEmpty=|/sysroot/usr/local/lib/repart.d
-ConditionDirectoryNotEmpty=|/sysroot/etc/repart.d
-ConditionDirectoryNotEmpty=|/sysusr/usr/lib/repart.d
-ConditionDirectoryNotEmpty=|/sysusr/usr/local/lib/repart.d
 
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/bin/systemd-repart --dry-run=no /dev/sda
+ExecStart=/usr/bin/systemd-repart --root=/ --dry-run=no /dev/disk/by-id/boot-esp
 
 # The tool returns 77 if there's no existing GPT partition table
 SuccessExitStatus=77
 
+[Install]
+WantedBy=initrd.target
