Tools: Add composefs

--- a/mkosi.conf.d/10-tools-tree.conf
+++ b/mkosi.conf.d/10-tools-tree.conf
@@ -7,7 +7,8 @@ ToolsTree=default
 ToolsTreePackages=
                   acl
                   attr
-                  policycoreutils
+                  composefs
                   osslsigncode
                   pesign
+                  policycoreutils
                   sbsigntools
