base: Add composefs, ima-evm-utils, keyutils, amd-ucode-firmware

--- a/mkosi.images/base/mkosi.conf
+++ b/mkosi.images/base/mkosi.conf
@@ -41,6 +41,7 @@ Packages=
 # Hardware support
 Packages=
          amd-gpu-firmware
+         amd-ucode-firmware
          atheros-firmware
          brcmfmac-firmware
          fwupd
@@ -56,6 +57,8 @@ Packages=
 # Measured boot
 Packages=
          efitools
+         ima-evm-utils
+         keyutils
          mokutil
          sbsigntools
          tpm2-tools
@@ -70,6 +73,7 @@ Packages=
 # File systems
 Packages=
          btrfs-progs
+         composefs
          dosfstools
          e2fsprogs
          erofs-utils
