initrd: Drop systemd-resolved, add composefs

--- a/mkosi.images/initrd/mkosi.conf
+++ b/mkosi.images/initrd/mkosi.conf
@@ -23,15 +23,6 @@ Packages=
          util-linux
          zram-generator
 
-# SELinux
-#Packages=
-#         checkpolicy
-#         libselinux
-#         libselinux-utils
-#         policycoreutils
-#         selinux-policy
-#         selinux-policy-targeted
-
 # Measured boot
 Packages=
          efibootmgr
@@ -53,6 +44,7 @@ Packages=
 # File systems
 Packages=
          btrfs-progs
+         composefs
          dosfstools
          e2fsprogs
          erofs-utils
@@ -82,7 +74,6 @@ Packages=
          ca-certificates
          iproute
          iputils
-         systemd-resolved
 
 # Compression/archives
 Packages=
