--- a/mkosi.images/system/mkosi.repart/05-root.conf
+++ b/mkosi.images/system/mkosi.repart/05-root.conf
@@ -1,10 +1,5 @@
 [Partition]
 Type=root
 Format=erofs
-CopyFiles=/:/
-ExcludeFilesTarget=/usr/
-ExcludeFilesTarget=/var/
-ExcludeFilesTarget=/home/
-ExcludeFilesTarget=/opt/
-ExcludeFilesTarget=/srv/
-ExcludeFilesTarget=/run/
+Label=root
+CopyFiles=/sysroot/:/
