Initrd slowly getting there

--- a/mkosi.images/base/mkosi.conf
+++ b/mkosi.images/base/mkosi.conf
@@ -61,6 +61,7 @@ Packages=
          keyutils
          mokutil
          sbsigntools
+         tpm2-tss
          tpm2-tools
 
 # Disks
@@ -88,6 +89,12 @@ Packages=
          fido2-tools
          gnupg2
          integritysetup
+         pam-u2f
+         pamu2fcfg
+         tpm2-pkcs11
+         tpm2-pkcs11-tools
+         tpm2-tss-engine
+         tpm2-tss-engine-utilities
          veritysetup
 
 # Network setup
