--- a/mkosi.images/bootdisk/mkosi.conf
+++ b/mkosi.images/bootdisk/mkosi.conf
@@ -13,6 +13,13 @@ BaseTrees=../../mkosi.output/base
 ExtraTrees=../../mkosi.output:/mkosi.output/
 Bootloader=systemd-boot
 Bootable=yes
+
+KernelCommandLine=
+KernelCommandLine=
+  console=ttyS0 loglevel=7
+  root=/dev/vg-sys/root ro rootflags=noexec,nosuid,nodev
+  mount.usr=/dev/vg-sys/usr mount.usrflags=nodev,ro
+
 Initrds=../../mkosi.output/base_%v-early-ucode.cpio
 Initrds=../../mkosi.output/initrd
 KernelModulesInitrd=yes
