--- a/mkosi.conf.d/10-tools-tree.conf
+++ b/mkosi.conf.d/10-tools-tree.conf
@@ -8,6 +8,7 @@ ToolsTreePackages=
                   acl
                   attr
                   composefs
+                  figlet
                   osslsigncode
                   pesign
                   policycoreutils
