initrd: WIP changes

--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-repart-bootdisk.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-repart-bootdisk.service
@@ -28,4 +28,4 @@ ExecStart=udevadm trigger -v -w -p DEVTYPE=partition
 SuccessExitStatus=77
 
 [Install]
-WantedBy=initrd-root-device.target
+WantedBy=initrd.target
