WIP provision disks

--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/firstboot-rotate-keys@.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/firstboot-rotate-keys@.service
@@ -20,7 +20,7 @@ Conflicts=shutdown.target initrd-switch-root.target
 Type=oneshot
 StandardOutput=journal+console
 RemainAfterExit=yes
-TimeoutSec=0
+TimeoutSec=infinity
 ExecStart=/usr/libexec/firstboot-rotate-keys "%f"
 
 [Install]
