--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/firstboot-init-lukshdrs@.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/firstboot-init-lukshdrs@.service
@@ -1,18 +1,17 @@
 [Unit]
 Description=Initialize disk encryption on device %f
 DefaultDependencies=no
-Wants=modprobe@dm_crypt.service
-After=modprobe@dm_crypt.service
 After=systemd-udevd-kernel.socket
 Requires=dev-security-fido.device
 After=dev-security-fido.device
 Requires=%i.device
 After=%i.device
-Wants=systemd-repart-bootdisk.service
-After=systemd-repart-bootdisk.service
 Wants=cryptsetup-pre.target
 After=cryptsetup-pre.target
 Before=systemd-cryptsetup@lukshdrs.service
+Conflicts=systemd-cryptsetup@lukshdrs.service
+Before=blockdev@dev-mapper-lukshdrs.target
+Conflicts=blockdev@dev-mapper-lukshdrs.target
 Before=cryptsetup.target
 Before=shutdown.target initrd-switch-root.target
 Conflicts=shutdown.target initrd-switch-root.target
@@ -20,10 +19,10 @@ Conflicts=shutdown.target initrd-switch-root.target
 [Service]
 Type=oneshot
 StandardOutput=journal+console
-RemainAfterExit=yes
 ExecCondition=sh -c '! cryptsetup isLuks "%f"'
-ExecStartPre=sh -c 'systemd-ask-password -e "Do you want to format %f to initialize the boot stick? (reply with upper case yes" | grep -Fxq "YES"'
+ExecCondition=sh -c '[ -z "$(wipefs -p -n "%f")" ]'
+ExecStartPre=sh -c 'systemd-ask-password -e "Do you want to format %f and bind it to this machine? (reply with upper case yes" | grep -Fxq "YES"'
 ExecStart=/usr/libexec/firstboot-init-lukshdrs "%f"
 
 [Install]
-WantedBy=initrd-root-device.target
+WantedBy=initrd.target
