--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptsetup@sysimages.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptsetup@sysimages.service
@@ -1,7 +1,6 @@
 [Unit]
 Description=Cryptography Setup for %I
 Documentation=man:crypttab(5) man:systemd-cryptsetup-generator(8) man:systemd-cryptsetup@.service(8)
-SourcePath=/etc/crypttab
 
 DefaultDependencies=no
 After=cryptsetup-pre.target systemd-udevd-kernel.socket
@@ -19,6 +18,6 @@ RemainAfterExit=yes
 TimeoutSec=infinity
 KeyringMode=shared
 OOMScoreAdjust=500
-ExecStart=/usr/lib/systemd/systemd-cryptsetup attach 'sysimages' '/dev/disk/by-partlabel/sysimages' '-' 'luks,fido2-device=auto,tpm2-device=auto,noauto,nofail,readonly'
+ExecStart=/usr/lib/systemd/systemd-cryptsetup attach 'sysimages' '/dev/disk/by-partlabel/sysimages' '-' 'luks,fido2-device=auto,tpm2-device=auto,readonly'
 ExecStop=/usr/lib/systemd/systemd-cryptsetup detach 'sysimages'
 
