--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptsetup@sysimages.service.d/90-enroll-fido.conf
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptsetup@sysimages.service.d/90-enroll-fido.conf
@@ -1,3 +1,3 @@
 [Unit]
-After=firstboot-cryptenroll-fido2@dev-disk-by\x2dpartlabel-sysimages.service
-Wants=firstboot-cryptenroll-fido2@dev-disk-by\x2dpartlabel-sysimages.service
+After=systemd-cryptenroll-convert-empty-to-fido2@dev-disk-by\x2dpartlabel-%i.service
+Wants=systemd-cryptenroll-convert-empty-to-fido2@dev-disk-by\x2dpartlabel-%i.service
