--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-repart-empty@.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-repart-empty@.service
@@ -4,7 +4,7 @@ Documentation=man:systemd-repart(8)
 DefaultDependencies=no
 Requires=%i.device
 After=%i.device
-After=boot-auth.target
+After=initrd-auth.target
 Before=cryptsetup-pre.target
 Before=initrd-root-device.target
 Before=initrd-usr-fs.target initrd-root-fs.target
