initrd: Detect and unlock detached LUKS headers

--- a/mkosi.images/bootdisk/mkosi.conf
+++ b/mkosi.images/bootdisk/mkosi.conf
@@ -1,7 +1,7 @@
 [Config]
-Dependencies=base
+#Dependencies=base
 Dependencies=initrd
-Dependencies=system
+#Dependencies=system
 
 [Output]
 Seed=4213a267-ab41-4e1f-8b2a-c08d3e579559
