initrd: Partition handling improvements

--- a/mkosi.images/bootdisk/mkosi.repart/00-esp.conf
+++ b/mkosi.images/bootdisk/mkosi.repart/00-esp.conf
@@ -4,6 +4,4 @@ Format=vfat
 CopyFiles=/efi:/
 SizeMinBytes=1G
 SizeMaxBytes=1G
-MakeDirectories=
-  /loader/credentials
-  /loader/addons
+MakeDirectories=/loader/credentials /loader/addons
