--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/initrd-totp-generate@.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/initrd-totp-generate@.service
@@ -19,4 +19,4 @@ StandardError=inherit
 Type=oneshot
 ExecStartPre=mkdir -m 0700 -p -Z -v '%t/credstore.encrypted'
 ExecStartPre=mkdir -p -v '/efi/loader/credentials'
-ExecStart=sh -eu -c 'umask 0077; printf "New machine TOTP key:\n\n" >&2 ; dd if=/dev/urandom bs=20 count=1 status=none | base32 -w0 | tee /dev/stderr | systemd-creds encrypt --with-key=tpm2 --name="initrd-totp-%I" --tpm2-pcrs=0+4+7+14 - - | tee "%t/credstore.encrypted/initrd-totp-%I" > "/efi/loader/credentials/initrd-totp-%I.cred"; printf "\n\n"'
+ExecStart=/usr/libexec/totp-generate 'initrd-totp-%I' '%t/credstore.encrypted/'
