initrd: Automatically format devices as luks PV

--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-repart-bootdisk.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-repart-bootdisk.service
@@ -4,8 +4,8 @@ Documentation=man:systemd-repart(8)
 DefaultDependencies=no
 Wants=modprobe@loop.service modprobe@dm_mod.service
 After=modprobe@loop.service modprobe@dm_mod.service
-Requires=dev-disk-by\x2dpartlabel-lukshdrs.device
-After=dev-disk-by\x2dpartlabel-lukshdrs.device
+Requires=dev-disk-by\x2did-spork\x2dboot\x2ddisk.device
+After=dev-disk-by\x2did-spork\x2dboot\x2ddisk.device
 After=initrd-auth.target
 Before=cryptsetup-pre.target
 Before=initrd-root-device.target
@@ -19,11 +19,11 @@ ConditionDirectoryNotEmpty=/usr/lib/repart-bootdisk.d
 Type=oneshot
 StandardOutput=journal+console
 RemainAfterExit=yes
-ExecStart=/usr/bin/systemd-repart --definitions=/usr/lib/repart-bootdisk.d --empty=refuse --dry-run=no /dev/disk/by-partlabel/lukshdrs
+ExecStart=/usr/bin/systemd-repart --definitions=/usr/lib/repart-bootdisk.d --empty=refuse --dry-run=no /dev/disk/by-id/spork-boot-disk
 # Wait for udev to settle partition updates to avoid a race where the device
 # node symlink for a partition label disappears while starting a systemd unit
 # depending on it.
-ExecStart=udevadm trigger -v -w -p DEVTYPE=partition
+ExecStart=udevadm wait --settle -t 3 /dev/disk/by-id/spork-boot-disk
 
 # The tool returns 77 if there's no existing GPT partition table
 SuccessExitStatus=77
