--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/firstboot-init-lukshdrs@.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/firstboot-init-lukshdrs@.service
@@ -20,8 +20,7 @@ Conflicts=shutdown.target initrd-switch-root.target
 Type=oneshot
 StandardOutput=journal+console
 ExecCondition=sh -c '! cryptsetup isLuks "%f"'
-ExecCondition=sh -c '[ -z "$(wipefs -p -n "%f")" ]'
-ExecStartPre=sh -c 'systemd-ask-password -e "Do you want to format %f and bind it to this machine? (reply with upper case yes" | grep -Fxq "YES"'
+ExecStartPre=sh -c 'systemd-ask-password --emoji=no --id="%n:doformat" --icon=dialog-warning -e "Do you want to format %f and bind it to this machine? (reply with upper case yes)" | grep -Fxq "YES"'
 ExecStart=/usr/libexec/firstboot-init-lukshdrs "%f"
 
 [Install]
