initrd: WIP install system

--- a/mkosi.images/bootdisk/mkosi.conf
+++ b/mkosi.images/bootdisk/mkosi.conf
@@ -17,8 +17,8 @@ Bootable=yes
 KernelCommandLine=
 KernelCommandLine=
   console=ttyS0 loglevel=7
-  root=/dev/vg-sys/root ro rootflags=noexec,nosuid,nodev
-  mount.usr=/dev/vg-sys/usr mount.usrflags=nodev,ro
+  root=/dev/mapper/root ro rootflags=noexec,nosuid,nodev
+  mount.usr=/dev/mapper/usr mount.usrflags=nodev,ro
 
 Initrds=../../mkosi.output/base_%v-early-ucode.cpio
 Initrds=../../mkosi.output/initrd
