--- a/mkosi.images/initrd/mkosi.conf
+++ b/mkosi.images/initrd/mkosi.conf
@@ -94,6 +94,7 @@ Packages=
          diffutils
          findutils
          gawk
+         jq
          less
          nano
          openssh-clients
@@ -108,13 +109,15 @@ Packages=
          xxd
 
 CleanPackageMetadata=yes
-RemoveFiles=/efi/EFI
-RemoveFiles=/var/log
-RemoveFiles=/var/cache
-RemoveFiles=/etc/pki/ca-trust/extracted/java/cacerts
+RemoveFiles=
+            /efi/EFI
+            /var/log
+            /var/cache
+            /usr/lib/modules/*/vmlinuz*
+            /usr/lib/modules/*/System.map
+            /etc/pki/ca-trust/extracted/java/cacerts
             /usr/lib/sysimage/libdnf5/transaction_history.sqlite*
             /var/cache/ldconfig/aux-cache
-            /usr/lib/systemd/catalog/systemd.*.catalog
             /usr/share/gcc*
             /usr/share/gdb*
             /usr/share/gnupg/help.*.txt
