--- a/mkosi.images/bootdisk/mkosi.repart/50-luks-headers.conf
+++ b/mkosi.images/bootdisk/mkosi.repart/50-luks-headers.conf
@@ -1,6 +1,6 @@
 [Partition]
 Type=linux-generic
 Label=lukshdrs
-SizeMinBytes=1G
+SizeMinBytes=300M
 SizeMaxBytes=1G
 # We will format and encrypt this partition on first boot
