--- a/mkosi.images/initrd/mkosi.conf.d/90-rm-systemd-hwdb/mkosi.conf
+++ b/mkosi.images/initrd/mkosi.conf.d/90-rm-systemd-hwdb/mkosi.conf
@@ -1,7 +1,7 @@
 [Content]
 # hwdb.bin and related files take up several MiB
 RemoveFiles=
+            /etc/udev/hwdb.d
             /usr/lib/udev/hwdb.d
-            /usr/lib/udev/hwdb.bin
             /usr/lib/systemd/system/sysinit.target.wants/systemd-hwdb-update.service
             /usr/lib/systemd/system/systemd-hwdb-update.service
