--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-repart-empty@.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-repart-empty@.service
@@ -5,6 +5,8 @@ DefaultDependencies=no
 Requires=%i.device
 After=%i.device
 After=initrd-auth.target
+Before=initrd-init-disks-pre.target
+Before=initrd-init-disks.target
 Before=cryptsetup-pre.target
 Before=initrd-root-device.target
 Before=initrd-usr-fs.target initrd-root-fs.target
@@ -17,12 +19,12 @@ ConditionDirectoryNotEmpty=/usr/lib/repart-empty.d
 Type=oneshot
 StandardOutput=journal+console
 RemainAfterExit=yes
-ExecCondition=/usr/bin/udevadm lock -d "%f" /usr/libexec/is-disk-blank "%f"
-ExecStart=/usr/bin/systemd-repart --definitions=/usr/lib/repart-empty.d --empty=require --dry-run=no "%f"
+ExecCondition=/usr/bin/udevadm lock -d '%f' /usr/libexec/is-disk-blank '%f'
+ExecStart=/usr/bin/systemd-repart --definitions=/usr/lib/repart-empty.d --empty=require --dry-run=no '%f'
 # Wait for udev to settle partition updates to avoid a race where the device
 # node symlink for a partition label disappears while starting a systemd unit
 # depending on it.
-ExecStart=udevadm wait --settle -t 3 "%f"
+ExecStart=udevadm wait --settle -t 3 '%f'
 
 [Install]
 WantedBy=initrd.target
